= Version 0.8.0

  * [API] Broker connection class is now AMQP::Session. It used to be an anonymous class that mixed
          AMQP::Client. Vast majority of applications won't notice the difference but dealing with
	  specific classes is easier.
  * [API] AMQP::Error instance now may carry cause, an exception in the underlying library that caused
          exception in question to be raised.
  * [API] When initial TCP connection fails, default action is now to raise AMQP::TCPConnectionFailed.
          It inherits from AMQP::Error so your rescue blocks that handle AMQP::Error will work fine.
  * [API] AMQP::BasicClient#reconnect now takes 2nd optional argument, period of waiting in seconds.
  * [FEATURE] You now can define handlers for initial connection failre, connection loss, define channel-level
              exceptions handlers on Channel instances. New exception hierarchy now makes it easier to
              detect what exactly the problem is.
  * [API] AMQP::Exchange#initialize now accepts :arguments option that takes a hash. Brokers
          may implement AMQP extensions using (usually x-prefixed) declaration arguments.
  * [API] AMQP::Queue#initialize now accepts :arguments option that takes a hash. RabbitMQ
          recognizes x-message-ttl argument and uses it as message TTL in milliseconds for
          queue that is being declared.
  * [API] AMQP#Logger is deprecated. It will be removed before 1.0 release.
  * [API] AMQP#fork is deprecated. It will be removed before 1.0 release.
  * [API] AMQP::RPC is deprecated. It will be removed before 1.0 release.
  * [FEATURE] Significant improvements to the documentation. From now on lack of/poor documentation
              is considered a severe bug that should be filed at https://github.com/ruby-amqp/amqp/issues
  * [FEATURE] Support for RabbitMQ extensions to AMQP 0.9.1
  * [API] AMQP::Exchange#publish now accepts (an optional) block that is called as soon as message